--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,9 +7,9 @@ import { SITE_TITLE } from '../consts';
 	<nav>
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Inicio</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">Nosotros</HeaderLink>
+			<HeaderLink href="/postrehelados">Inicio</HeaderLink>
+			<HeaderLink href="/postrehelados/blog">Blog</HeaderLink>
+			<HeaderLink href="/postrehelados/about">Nosotros</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://m.webtoo.ls/@astro" target="_blank">
