--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/BlogPost.astro';
 	title="Nosotros"
 	description="Postres y helados artesanales"
 	pubDate={new Date('January 21 2025')}
-	heroImage="/public/hero-smoothie2.jpg"
+	heroImage="./public/hero-smoothie2.jpg"
 >
 	<p>
 		Somos una empresa familiar, que mantenemos recetas tradicionales e innovación para crear los mejores productos del mercado
